tests/ui/ast_csp_product_term.stderr
error[E0506]: cannot assign to `term` because it is borrowed
 --> $DIR/ast_csp_product_term.rs:7:5
  |
6 |     let lit = ast::CspProductTerm::new(term, &term);
  |                                              ----- borrow of `term` occurs here
7 |     term = ast::Term::from(sym);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `term` occurs here
8 |     let _end = (lit,term);
  |                 --- borrow later used here

For more information about this error, try `rustc --explain E0506`.
